--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://e233b01c-1ac1-4c41-b721-95c54fa2a459.preview.emergentagent.com
 WDS_SOCKET_PORT=443
